--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
-    "@types/node": "18.15.11",
+    "@supabase/supabase-js": "^2.39.0",
+    "@types/node": "20.10.5",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
-    "@vercel/analytics": "^0.1.11",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
+    "eslint-config-next": "14.0.4",
+    "next": "14.0.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
-    "vercel": "^28.18.4"
+    "tailwindcss": "3.3.6",
+    "typescript": "5.3.3",
+    "vercel": "^28.20.0"
   }
 }
